fixed overflow of h1 text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,7 +193,7 @@ footer {
         flex-direction: column;
     }
     .heading-image {
-        width: 500px;
+        width: 100%;
         align-self: center;
     }
     .footer-col:nth-child(1) {
